HelloUltraviolet/Fixtures/RejectedSource/Statements/RegionDiagnostic/Expected.uv
//! Expected diagnostic metadata for the RegionDiagnostic rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "diag.18.Region")
